# emf.beer

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
emf-beer/: audio.py  bar.py  main.py  settings.py  sip.py  tts.py
templates/: index.html
