[project]
name = "emf-beer"
version = "0.1.0"
description = "emf.beer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "httpx>=0.28",
    "jinja2>=3.1.6",
    "pjsua2",
    "pocket-tts[quantize]>=2.1.0",
    "soundfile>=0.12",
    "torch>=2.13.0",
    "websockets>=16.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
pjsua2 = { path = "vendor/pjproject-2.17/pjsip-apps/src/swig/python/dist/pjsua2-2.17-cp314-cp314-macosx_15_0_arm64.whl" }
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[tool.fastapi]
entrypoint = "emf-beer.main:app"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "Q"]
fixable = ["E", "F", "W", "I", "Q"]
ignore = ["E501"]
